Fix chart not hiding on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4108,6 +4108,11 @@ input[name=searchByNameOrUsername] {
     border-bottom-style: solid;
 }
 
+.class-chart {
+    display: flex;
+    flex-flow: column
+}
+
 @keyframes centerScaleUp {
     from {
         opacity: 0;
